верстка готова, осталось подровнять

--- a/blocks/footer/footer.pug
+++ b/blocks/footer/footer.pug
@@ -12,7 +12,8 @@
                 li.footer__list-item 
                     a(href="#!") Список лиц, под контролем либо значительным влиянием которых находится Банк
     ul.footer__list
-        li.footer__list-item-dropdown.footer__list-item-dropdown-2 Частым клиентам
+        li.footer__list-item-dropdown
+            span.footer__list-item-dropdown-2 Частым клиентам
             ul.footer__dropdown-list-2
                 li.footer__list-item 
                     a(href="#!") Банковские карты
@@ -23,7 +24,8 @@
                 li.footer__list-item 
                     a(href="#!") Защитные признаки банкнот Банка России
     ul.footer__list
-        li.footer__list-item-dropdown.footer__list-item-dropdown-3 Корпоративным клиентам
+        li.footer__list-item-dropdown
+            span.footer__list-item-dropdown-3 Корпоративным клиентам
             ul.footer__dropdown-list-3
                 li.footer__list-item 
                     a(href="#!") Как стать клиентом
@@ -32,7 +34,8 @@
                 li.footer__list-item 
                     a(href="#!") Интернет-банк
     ul.footer__list
-        li.footer__list-item-dropdown.footer__list-item-dropdown-4 Услуги РЦБ
+        li.footer__list-item-dropdown
+            span.footer__list-item-dropdown-4 Услуги РЦБ
             ul.footer__dropdown-list-4
                 li.footer__list-item 
                     a(href="#!") Доступ на валютный рынок
