--- a/pug/index.pug
+++ b/pug/index.pug
@@ -11,7 +11,7 @@ block header
             include ../blocks/grid/grid.pug
             include ../blocks/news/news.pug
     .flex-container.footer
-        .main-container
+        .main-container.footer_container
             include ../blocks/footer/footer.pug
 block content
-block footer        
+block footer
