--- a/blocks/slider/slider.pug
+++ b/blocks/slider/slider.pug
@@ -4,8 +4,7 @@
             .slider__title Центр для успешных инвестиций
             .slider__text Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.
             .slider__btn
-                .btn 
-                    a(href="#!") Подать заявку
+                a(href="#!").btn  Подать заявку
         .slider__image
             img(src="media/sliderMan.png" alt="image")
     .item
@@ -13,7 +12,7 @@
             .slider__title Центр для успешных инвестиций 2
             .slider__text Прямой доступ на валютный рынок. Зарабатывайте на колебаниях курсов мировых валют
             .slider__btn
-                .btn Подать заявку
+                a(href="#!").btn Подать заявку
         .slider__image
             img(src="media/sliderMan.png" alt="image")
     .item
@@ -21,7 +20,6 @@
             .slider__title Центр для успешных инвестиций 3
             .slider__text Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.
             .slider__btn
-                .btn 
-                    a(href="#!") Подать заявку
+                a(href="#!").btn Подать заявку
         .slider__image
             img(src="media/sliderMan.png" alt="image")
